openmediavault-compose (6.7.20) UNRELEASED; urgency=medium

  * Add multi-column sort to Files tab
  * Add OMV_COMPOSE_QUIET environment variable to add --quiet flag to
    pull commands and --quiet-pull to up commands.

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 16 Jun 2023 07:11:25 -0500

openmediavault-compose (6.7.19) stable; urgency=low

  * Fix search

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 14 Jun 2023 06:08:01 -0500

openmediavault-compose (6.7.18) stable; urgency=low

  * Add another link to wiki
  * Add Images tab
  * Improve sorting

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 13 Jun 2023 15:48:11 -0500

openmediavault-compose (6.7.17) stable; urgency=low

  * Add docker-buildx-plugin package
  * Add button to pull and build dockerfile
  * Add button to create new docker networks

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 09 Jun 2023 09:20:00 -0500

openmediavault-compose (6.7.16) stable; urgency=low

  * Add Volumes tab to display information on docker volumes
  * Add Networks tab to display information on docker networks
  * Set Docker storage path to blank if nvidia is detected in docker
    daemon.json to prevent custom config from being lost

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 08 Jun 2023 06:19:12 -0500

openmediavault-compose (6.7.15) stable; urgency=low

  * Sort stats columns correctly

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 07 Jun 2023 08:03:44 -0500

openmediavault-compose (6.7.14) stable; urgency=low

  * Use multiple status tags instead of mixed on Files tab
  * Remove docker-compose if docker-compose-plugin is installed

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 05 Jun 2023 17:29:29 -0500

openmediavault-compose (6.7.13) stable; urgency=low

  * Re-add python3-docker dependency required for autocompose
