@@ -38,7 +38,6 @@ if ! omv_config_exists "/config/services/compose"; then
   omv_config_add_node "/config/services" "compose"
   omv_config_add_key "/config/services/compose" "sharedfolderref" ""
   omv_config_add_key "/config/services/compose" "dockerStorage" "${dockerPath}"
-  omv_config_add_key "/config/services/compose" "all" "0"
   omv_config_add_node "/config/services/compose" "files"
   omv_config_add_node "/config/services/compose" "dockerfiles"
 fi
