@@ -1,0 +1,6 @@
+version: "1.0"
+type: route
+data:
+  url: "/services/compose/services"
+  title: _("Services")
+  component: omv-services-compose-services-datatable-page
